--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
   "compatibility_date": "2025-01-16",
   "compatibility_flags": ["nodejs_compat"],
   "main": "src/server.ts",
-  "workers_dev": true,
+  "workers_dev": false,
   "preview_urls": true,
   "placement": {
     "mode": "smart",
