--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "bun run build && wrangler deploy",
     "format": "oxfmt --check",
     "format:fix": "oxfmt",
     "lint": "oxlint --type-aware --type-check",
-    "lint:fix": "oxlint --fix --type-aware --type-check"
+    "lint:fix": "oxlint --fix --type-aware --type-check",
+    "db:migrations:generate": "drizzle-kit generate",
+    "db:migrations:list": "wrangler d1 migrations list DB --local",
+    "db:migrations:list:prod": "wrangler d1 migrations list DB --remote",
+    "db:migrations:apply": "wrangler d1 migrations apply DB --local",
+    "db:migrations:apply:prod": "wrangler d1 migrations apply DB --remote",
+    "cron:trigger": "curl 'http://localhost:3000/cdn-cgi/handler/scheduled?cron=0+6+*+*+*'"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.150.0",
