--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "bun run build && wrangler deploy",
+    "test": "bun test",
     "format": "oxfmt --check",
     "format:fix": "oxfmt",
     "lint": "oxlint --type-aware --type-check",
@@ -19,8 +20,11 @@
     "cron:trigger": "curl 'http://localhost:3000/cdn-cgi/handler/scheduled?cron=0+6+*+*+*'"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-router": "^1.150.0",
+    "@tanstack/react-router-ssr-query": "^1.151.1",
     "@tanstack/react-start": "^1.150.0",
+    "@tanstack/zod-adapter": "^1.151.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
     "fuse.js": "^7.1.0",
@@ -41,6 +45,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/devtools-vite": "^0.4.1",
     "@tanstack/router-plugin": "^1.150.0",
+    "@types/bun": "^1.3.6",
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
