docs: add ADMIN_SECRET to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+# GitHub token for API access (required for discovery)
 GITHUB_TOKEN=""
+
+# Admin secret for triggering manual discovery (generate with: openssl rand -hex 32)
+ADMIN_SECRET=""
